--- a/package.json
+++ b/package.json
@@ -4,12 +4,14 @@
 	"description": "",
 	"main": "server.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"start": "nodemon server/server"
 	},
 	"keywords": [],
 	"author": "Stephon Tomlinson",
 	"license": "ISC",
 	"dependencies": {
-		"express": "^4.17.1"
+		"cors": "^2.8.5",
+		"express": "^4.17.1",
+		"morgan": "^1.10.0"
 	}
 }
