--- a/package.json
+++ b/package.json
@@ -4,14 +4,22 @@
 	"description": "",
 	"main": "server.js",
 	"scripts": {
-		"start": "nodemon server/server"
+		"start": "node server/server",
+		"server": "nodemon server/server",
+		"client": "npm start --prefix client",
+		"dev": "concurrently \"npm run server\" \"npm run client\""
 	},
 	"keywords": [],
 	"author": "Stephon Tomlinson",
 	"license": "ISC",
 	"dependencies": {
 		"cors": "^2.8.5",
+		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
 		"morgan": "^1.10.0"
+	},
+	"devDependencies": {
+		"concurrently": "^5.3.0",
+		"nodemon": "^2.0.4"
 	}
 }
