--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
 	"version": "1.0.0",
 	"description": "",
 	"main": "server.js",
+	"type": "module",
 	"scripts": {
 		"start": "node server/server",
 		"server": "nodemon server/server",
@@ -16,6 +17,7 @@
 		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
+		"mongoose": "^5.10.7",
 		"morgan": "^1.10.0"
 	},
 	"devDependencies": {
