--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
 		"start": "node server/server",
 		"server": "nodemon server/server",
 		"client": "npm start --prefix client",
-		"dev": "concurrently \"npm run server\" \"npm run client\""
+		"dev": "concurrently \"npm run server\" \"npm run client\"",
+		"data:import": "node server/seeder",
+		"data:destroy": "node server/seeder -d"
 	},
 	"keywords": [],
 	"author": "Stephon Tomlinson",
@@ -19,6 +21,7 @@
 		"cors": "^2.8.5",
 		"dotenv": "^8.2.0",
 		"express": "^4.17.1",
+		"express-async-handler": "^1.1.4",
 		"mongoose": "^5.10.7",
 		"morgan": "^1.10.0"
 	},
